# IntroCienciaDados

./: Olá,_este_é_o_Colaboratory.ipynb  README.md  exercicios_6015020.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Arquivos/: EpisodiosGreysAnatomy.csv
